The start of a line of poetry no longer overlaps a chapter number in drop caps in web export
https://github.com/bibledit/cloud/issues/905

--- a/unittests/tests/exports.css
+++ b/unittests/tests/exports.css
@@ -2,7 +2,7 @@
 body { }
 p { margin-top: 0; margin-bottom: 0; }
 p.page { page-break-after: always; }
-span.dropcaps { float: left; font-size: 300%; line-height: 0.85em; margin-right: 0.03em; margin-bottom:-0.25em; }
+.dropcaps:nth-of-type(1) { font-size: 300%; line-height: 0.85em; margin-right: 0.03em; margin-bottom:-0.25em; }
 a { text-decoration: none; background: none; }
 a:visited { color: #5a3696; }
 a:active { color: #faa700; }
